# sdl_gpu_debug_tools

./: .gitmodules  CMakeLists.txt  README.md  SDL_gpud.h  SDL_gpud_shaders.h  build_shaders.sh  main.c  main.cpp  sdl3_gpu_dbg_draw.h  sdl3_gpu_dbg_draw_shaders.h  sdl_gpud.c  sdl_gpud.h  sdl_gpud_shaders.h
example/: CMakeLists.txt  impl.c  main.cpp
shaders/: line_3d.frag  line_3d.vert  poly.vert  shader.frag  shader.frag.dxil  shader.frag.msl  shader.frag.spv  shader.vert.dxil  shader.vert.msl  shader.vert.spv
